--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     
 
 
@@ -14,7 +15,7 @@
             "program": "/Users/pkulium/Documents/fl/HierFL-master/hierfavg.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["--dataset=mnist","--model=lenet","--num_clients=20","--num_edges=5","--frac=1","--num_local_update=60","--num_edge_aggregation=1","--num_communication=100","--batch_size=20","--iid=0","--edgeiid=1","--show_dis=1","--lr=0.01","--lr_decay=0.995","--lr_decay_epoch=1","--momentum=0","--weight_decay=0"],
+            "args": ["--dataset=mnist","--model=lenet","--num_clients=20","--num_edges=5","--frac=1","--num_local_update=60","--num_edge_aggregation=1","--num_communication=100","--batch_size=20","--iid=0","--edgeiid=1","--show_dis=1","--lr=0.01","--lr_decay=0.995","--lr_decay_epoch=1","--momentum=0","--weight_decay=0", "--num_honest_clients=20"],
 
         }
     ]
